--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
     <div class="row">
         <div class="large-12 columns" id="slide">
-            <img class="mySlides" src="./img/slide1.jpg">
-            <img class="mySlides" src="./img/slide2.jpg">
-            <img class="mySlides" src="./img/slide3.jpg">
-            <img class="mySlides" src="./img/slide4.jpg">
+            <img class="mySlides" src="./img/design1.jpg">
+            <img class="mySlides" src="./img/design2.jpg">
+            <img class="mySlides" src="./img/design3.jpg">
+            <img class="mySlides" src="./img/design4.jpg">
         </div>
     </div>
 
@@ -49,31 +49,31 @@
 
             <h1>Collapsible Sets</h1>
 
-            <div class="large-4 medium-4 small-4 columns">
+            <div class="large-4 medium-4 small-4 columns" id="nice">
                 <div class="primary callout">
-                    <span>   <img src="./img/slide1.jpg" alt=""><br> <hr> <p>Try this bitch</p> <hr> </span>
+                    <span>   <img src="./img/low1.jpg" alt=""><br> <hr> <p>Try this bitch</p> <hr> </span>
                 </div>
             </div>
-            <div class="large-4 medium-4 small-4 columns">
+            <div class="large-4 medium-4 small-4 columns" id="nice">
                 <div class="primary callout">
-                    <span>  <img src="./img/slide3.jpg" alt=""> <br> <hr> <p>Try this bitch</p> <hr> </span>
+                    <span>  <img src="./img/low2.jpg" alt=""> <br> <hr> <p>Try this bitch</p> <hr> </span>
                 </div>
             </div>
-            <div class="large-4 medium-4 small-4 columns">
+            <div class="large-4 medium-4 small-4 columns" id="nice">
                 <div class="primary callout">
-                    <span>    <img src="./img/slide4.jpg" alt=""> <br> <hr> <p>Try this bitch</p> <hr> </span>
+                    <span>    <img src="./img/slide1.jpg" alt=""> <br> <hr> <p>Try this bitch</p> <hr> </span>
                 </div>
             </div>
         </div>
     </div>
 
 
-    <div class="row">
+    <div class="row" id="size">
         <div class="large-6 medium-6 columns">
-            <img src="./img/slide3.jpg" alt="">
+            <img src="./img/slide2.jpg" alt="">
         </div>
         <div class="large-6 medium-6 columns">
-            <img src="./img/slide3.jpg" alt="">
+            <img src="./img/low4.jpg" alt="">
         </div>
     </div>
     <div class="row">
