--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="large-12 columns" id="slide">
             <img class="mySlides" src="./img/design1.jpg">
             <img class="mySlides" src="./img/design2.jpg">
-            <img class="mySlides" src="./img/design3.jpg">
-            <img class="mySlides" src="./img/design4.jpg">
+            <img class="mySlides" src="./img/slide3.jpg">
+            <img class="mySlides" src="./img/slide4.jpg">
         </div>
     </div>
 
