--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
     <div class="row">
-        <div class="large-12 columns" id="display">
-            <p id="wd"> <span id="hm">Deseour!</span> About Blog Portforlio Members Contact</p>
+        <div class="large-12 columns bounce infinite animated" id="display">
+            <p id="wd"> <span id="hm" >Deseour!</span> About Blog Portforlio Members Contact</p>
         </div>
     </div>
 
@@ -95,6 +96,11 @@
         </div>
     </div>
 
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+
+    </script>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
