--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>Deseour!</title>
     <link href="https://fonts.googleapis.com/css?family=Galada" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
@@ -17,7 +17,7 @@
 <body>
     <div class="row">
         <div class="large-12 columns bounce infinite animated" id="display">
-            <p id="wd"> <span id="hm" >Deseour!</span> About Blog Portforlio Members Contact</p>
+            <p id="wd"> <span id="hm">Deseour!</span> About Blog Portforlio Members Contact</p>
         </div>
     </div>
 
@@ -34,35 +34,36 @@
 
         <div class="medium-12 columns">
             <hr>
-            <blockquote id="move">IHR JAGUAR & LAND ROVER HÄNDLER</blockquote>
+            <article id="move">MAGIC BEHIND THE CAMERA!</article>
             <hr>
         </div>
         <!-- Grid Example -->
 
         <div class="row">
             <div class="large-12 columns">
-                <div class="primary callout">
-                    <p><strong>This is a twelve column section in a row.</strong> Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.This is a twelve column section in a row. Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.This is a twelve column section in a row. Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.This is a twelve column section in a row. Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.This is a twelve column section in a row. Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.</p>
+                <div class="primary callout" id="sell">
+                    <p>Photography doesnt only constitute what happens infront of the camera. There are alot of things that could be put in place to ensure the success of a phot. Though not on a regurlar, sometimes the magic jus comes on Its own!
+                        <br> Here are Deseour, we look for and intend on sucess on every photo. Our wide range of collections in photography ensures that you do not walk away un-satisfied or even displeased in the very least!</p>
                 </div>
             </div>
         </div>
         <div class="row">
 
-            <h1>Collapsible Sets</h1>
+            <h1>Portforlio</h1>
 
-            <div class="large-4 medium-4 small-4 columns" id="nice">
+            <div class="large-4 medium-4 small-12 columns" id="nice">
                 <div class="primary callout">
-                    <span>   <img src="./img/low1.jpg" alt=""><br> <hr> <p>Try this bitch</p> <hr> </span>
+                    <span>   <img src="./img/abt2.jpg" alt=""><br> <hr> <p>Child Photography</p> <hr> </span>
                 </div>
             </div>
-            <div class="large-4 medium-4 small-4 columns" id="nice">
+            <div class="large-4 medium-4 small-12 columns" id="nice">
                 <div class="primary callout">
-                    <span>  <img src="./img/low2.jpg" alt=""> <br> <hr> <p>Try this bitch</p> <hr> </span>
+                    <span>  <img src="./img/slide1.jpg" alt=""> <br> <hr> <p>Spouse / Wedding photography</p> <hr> </span>
                 </div>
             </div>
-            <div class="large-4 medium-4 small-4 columns" id="nice">
+            <div class="large-4 medium-4 small-12 columns" id="nice">
                 <div class="primary callout">
-                    <span>    <img src="./img/slide1.jpg" alt=""> <br> <hr> <p>Try this bitch</p> <hr> </span>
+                    <span>    <img src="./img/low3.jpg" alt=""> <br> <hr> <p>Home collection Photography</p> <hr> </span>
                 </div>
             </div>
         </div>
@@ -71,31 +72,22 @@
 
     <div class="row" id="size">
         <div class="large-6 medium-6 columns">
-            <img src="./img/slide2.jpg" alt="">
+            <img src="./img/design1.jpg" alt="">
         </div>
         <div class="large-6 medium-6 columns">
-            <img src="./img/low4.jpg" alt="">
+            <img src="./img/design2.jpg" alt="">
         </div>
     </div>
     <div class="row">
         <div class="large-12 columns">
-            <label><strong>This is a twelve column section in a row.</strong> Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.This is a twelve column section in a row. Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.This is a twelve column section in a row. Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.This is a twelve column section in a row. Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.This is a twelve column section in a row. Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.</label>
-
-            <textarea placeholder="small-12.columns"> <strong>This is a twelve column section in a row.</strong> Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.This is a twelve column section in a row. Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.This is a twelve column section in a row. Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.This is a twelve column section in a row. Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.This is a twelve column section in a row. Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.</textarea>
+            <label id="sell">Our Staff is Ready, equipped and able to bring out the perfection that lies in every photo. With skillsets that is quite rare to find, and the passion, drive and love for photography, we assure you that you will not find a better resort to bring out your photos, like you would at our Agency!</label>
         </div>
+        <hr>
+        <article id="sell">
+            Its all in the details!
+        </article>
+        <hr>
     </div>
-
-    <div class="large-4 medium-4 columns">
-        <div class="callout">
-            <ul>
-                <li>Calvary Road,</li>
-                <li>Msongari Drive,</li>
-                <li>252 Karen,</li>
-                <li>Canada.</li>
-            </ul>
-        </div>
-    </div>
-
     <script src="js/wow.min.js"></script>
     <script>
         new WOW().init();
@@ -107,5 +99,17 @@
     <script src="js/vendor/foundation.js"></script>
     <script src="js/app.js"></script>
 </body>
+<footer>
+    <div class="small-12 large-4 medium-4 columns">
+        <div class="callout">
+            <ul>
+                <li>Calvary Road,</li>
+                <li>Msongari Drive,</li>
+                <li>252 Karen,</li>
+                <li>Canada.</li>
+            </ul>
+        </div>
+    </div>
+</footer>
 
 </html>
