--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="row">
         <div class="large-12 columns bounce infinite animated" id="display">
-            <p id="wd"> <span id="hm">Deseour!</span> About Blog Portforlio Members Contact</p>
+            <p id="wd"> <span id="hm">Deseour!</span> About Portforlio Members Contact</p>
         </div>
     </div>
 
@@ -49,7 +49,7 @@
         </div>
         <div class="row">
 
-            <h1>Portforlio</h1>
+            <h3 id="sell">Portforlio</h3>
 
             <div class="large-4 medium-4 small-12 columns" id="nice">
                 <div class="primary callout">
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-
+    <h3 id="sell">Members of the Team!</h3>
     <div class="row" id="size">
         <div class="large-6 medium-6 columns">
             <img src="./img/design1.jpg" alt="">
@@ -100,16 +100,16 @@
     <script src="js/app.js"></script>
 </body>
 <footer>
-    <div class="small-12 large-4 medium-4 columns">
-        <div class="callout">
-            <ul>
-                <li>Calvary Road,</li>
-                <li>Msongari Drive,</li>
-                <li>252 Karen,</li>
-                <li>Canada.</li>
-            </ul>
-        </div>
+    <div class=" list small-12 large-12 medium-12 columns">
+
+        <ul>
+            <li>Calvary Road,</li>
+            <li>Msongari Drive,</li>
+            <li>252 Karen,</li>
+            <li>Canada.</li>
+        </ul>
     </div>
+
 </footer>
 
 </html>
