--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
 
 <body>
     <div class="row">
-        <div class="large-12 columns bounce infinite animated" id="display">
-            <p id="wd"> <span id="hm">Deseour!</span> About Portforlio Members Contact</p>
+        <div class="large-12 columns bounce animated" id="display">
+            <p id="wd"> <span id="hm">Deseour!</span></p>
         </div>
     </div>
 
     <div class="row">
         <div class="large-12 columns" id="slide">
-            <img class="mySlides" src="./img/design1.jpg">
+            <img class="mySlides" src="./img/img/design_slide.jpeg">
+            <img class="mySlides" src="./img/img/design_slide2.jpg">
+            <img class="mySlides" src="./img/img/design_slide3.jpg">
             <img class="mySlides" src="./img/design2.jpg">
             <img class="mySlides" src="./img/slide3.jpg">
-            <img class="mySlides" src="./img/slide4.jpg">
+
         </div>
     </div>
 
@@ -42,8 +44,8 @@
         <div class="row">
             <div class="large-12 columns">
                 <div class="primary callout" id="sell">
-                    <p>Photography doesnt only constitute what happens infront of the camera. There are alot of things that could be put in place to ensure the success of a phot. Though not on a regurlar, sometimes the magic jus comes on Its own!
-                        <br> Here are Deseour, we look for and intend on sucess on every photo. Our wide range of collections in photography ensures that you do not walk away un-satisfied or even displeased in the very least!</p>
+                    <p>Our work is complete once our clients are furnished with the
+                      tools and techniques they need to strengthen that crucial relationship with their audiences. </p>
                 </div>
             </div>
         </div>
@@ -53,40 +55,36 @@
 
             <div class="large-4 medium-4 small-12 columns" id="nice">
                 <div class="primary callout">
-                    <span>   <img src="./img/abt2.jpg" alt=""><br> <hr> <p>Child Photography</p> <hr> </span>
+                    <span>   <img src="./img/img/design3.jpg" alt=""><br> <hr> <p>Child Photography</p> <hr> </span>
                 </div>
             </div>
             <div class="large-4 medium-4 small-12 columns" id="nice">
                 <div class="primary callout">
-                    <span>  <img src="./img/slide1.jpg" alt=""> <br> <hr> <p>Spouse / Wedding photography</p> <hr> </span>
+                    <span>  <img src="./img/img/design2.jpg" alt=""> <br> <hr> <p>Spouse / Wedding photography</p> <hr> </span>
                 </div>
             </div>
             <div class="large-4 medium-4 small-12 columns" id="nice">
                 <div class="primary callout">
-                    <span>    <img src="./img/low3.jpg" alt=""> <br> <hr> <p>Home collection Photography</p> <hr> </span>
+                    <span>    <img src="./img/img/design1.jpg" alt=""> <br> <hr> <p>Home collection Photography</p> <hr> </span>
                 </div>
             </div>
         </div>
     </div>
 
-    <h3 id="sell">Members of the Team!</h3>
-    <div class="row" id="size">
-        <div class="large-6 medium-6 columns">
-            <img src="./img/design1.jpg" alt="">
-        </div>
-        <div class="large-6 medium-6 columns">
-            <img src="./img/design2.jpg" alt="">
-        </div>
-    </div>
+
+    <hr>
+    <h3 id="sell">Get In touch with Us!</h3>
+
     <div class="row">
         <div class="large-12 columns">
-            <label id="sell">Our Staff is Ready, equipped and able to bring out the perfection that lies in every photo. With skillsets that is quite rare to find, and the passion, drive and love for photography, we assure you that you will not find a better resort to bring out your photos, like you would at our Agency!</label>
+            <label id="sell">Our Staff is Ready, equipped and able to bring out the perfection that lies in every photo.
+              With skillsets that is quite rare to find,
+              and the passion, drive and love for photography,
+              we assure you that you will not find a better resort to bring out your photos,
+              like you would at our Agency!
+              We would really like to hear your thoughts and take really amazing photos that will forever go down in your albums!
+            </label>
         </div>
-        <hr>
-        <article id="sell">
-            Its all in the details!
-        </article>
-        <hr>
     </div>
     <script src="js/wow.min.js"></script>
     <script>
@@ -99,17 +97,4 @@
     <script src="js/vendor/foundation.js"></script>
     <script src="js/app.js"></script>
 </body>
-<footer>
-    <div class=" list small-12 large-12 medium-12 columns">
-
-        <ul>
-            <li>Calvary Road,</li>
-            <li>Msongari Drive,</li>
-            <li>252 Karen,</li>
-            <li>Canada.</li>
-        </ul>
-    </div>
-
-</footer>
-
 </html>
